--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".SignUpActivity"></activity>
         <activity android:name=".ShoppingList"></activity>
+        <activity android:name=".ProductList"></activity>
         <activity android:name=".AddList"></activity>
         <activity android:name=".EditList"></activity>
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
