--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".ShoppingList"></activity>
         <activity android:name=".ProductList"></activity>
         <activity android:name=".AddList"></activity>
+        <activity android:name=".AddProduct"></activity>
         <activity android:name=".EditList"></activity>
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
